<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_user"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_item_profile"
            android:icon="@drawable/ic_item_profile"/>
        <item
            android:id="@+id/nav_account_manager"
            android:title="@string/nav_item_acc_manager"
            android:icon="@drawable/ic_item_account_manager"/>
    </group>
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:checked="true"
            android:title="@string/nav_item_costs"
            android:icon="@drawable/ic_item_costs"/>
        <item
            android:id="@+id/nav_map"
            android:title="@string/nav_item_map"
            android:icon="@drawable/ic_item_costs_map"/>
        <item
            android:id="@+id/nav_statistic"
            android:title="@string/nav_item_statistic"
            android:icon="@drawable/ic_item_statistics"/>
    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_item_settings"
            android:icon="@drawable/ic_item_settings"/>
    </group>
</menu>