<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_choose_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:text="@string/statistics_type"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_choose_type"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/by_category" />

        <RadioButton
            android:id="@+id/rb_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/by_market" />

        <RadioButton
            android:id="@+id/rb_geo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/by_geo" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_setup_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_type"
        android:layout_margin="10dp"
        android:text="@string/setup_date"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_date_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_setup_date"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_date_mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/date_month" />

        <RadioButton
            android:id="@+id/rb_date_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/date_season" />

        <RadioButton
            android:id="@+id/rb_date_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:text="@string/date_year" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_date_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_date_type"
        android:layout_alignStart="@+id/rg_date_type"
        android:layout_margin="10dp"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/ll_period_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_date_setting"
        android:layout_alignStart="@+id/rg_date_type"
        android:layout_alignEnd="@+id/rg_date_type"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_how_much"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/date_period_amount"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_period_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>