<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_cost_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cost_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_amount"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cost_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_date"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cost_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_market_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_cost_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chb_cost_add_geo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_cost_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cost_geo_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_city"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:textSize="20sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/et_cost_geo_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_address"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_cost_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>