<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner_edit_cost_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_edit_cost_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_edit_cost_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_edit_cost_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_market_name"
        android:inputType="textCapSentences"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_edit_cost_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_edit_cost_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:visibility="invisible" />
</LinearLayout>