<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="5dp">

    <ImageView
        android:id="@+id/iv_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/info_cat_icon" />

    <LinearLayout
        android:id="@+id/ll_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user_icon"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- <LinearLayout
         android:id="@+id/ll_user_goal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/ll_user_name"
         android:layout_marginVertical="10dp"
         android:orientation="horizontal">

         <TextView
             android:id="@+id/tv_user_goal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/user_goal"
             android:textColor="@color/black"
             android:textSize="20sp" />

         <EditText
             android:id="@+id/et_user_goal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:inputType="textMultiLine"
             android:lines="3"
             android:maxLines="3"
             android:minLines="1"
             android:textSize="20sp" />
     </LinearLayout>-->

    <LinearLayout
        android:id="@+id/ll_user_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_user_name"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_gender"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg_user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_user_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/gender_male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_user_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_female"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_user_gender"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_age"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:inputType="number"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user_profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_user_age"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profession"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/et_user_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_user_working_period"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_start_date"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user_working_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_working_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/user_working_period"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_working_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>